feat: add logic to create a patient
