# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\V1\AuthController;
+use App\Http\Controllers\Api\V1\PatientController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -18,6 +19,8 @@ Route::prefix('v1')->group(function () {
     Route::middleware('auth:sanctum')->group(function () {
         Route::get('/user', [AuthController::class, 'user'])->name('v1.user');
         Route::post('/logout', [AuthController::class, 'logout'])->name('v1.logout');
+        // Patient routes
+        Route::apiResource('patients', PatientController::class);
     });
 });
 // ====> END V1 ROUTES <====
